--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.3.4",
     "ionicons": "^5.5.3",
     "next": "^11.1.2",
+    "ansi-regex": "^6.0.1",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
